--- a/main.html
+++ b/main.html
@@ -27,23 +27,72 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a href="main.html" class="navbar-brand">
-            <img src="img/icone.svg" width="30" height="30" alt="Agenda de contatos"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toogle="collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown"></li>
-                <li class="nav-item dropdown"></li>
-                <li class="nav-item"></li>
-            </ul>
-            <form></form>
-            <span></span>
-        </div>
+      <a class="navbar-brand" href="#">
+        <img src="img/icone.svg" width="30" height="30" alt="Agenda de contatos" />
+      </a>
+      <button class="navbar-toggler" type="button" data-toogle="collapse" data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" id="menuCadastros" 
+            data-toogle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="bi-card-list"></i> Cadastros</a>
+            <div class="dropdown-menu" aria-labelledby="menuCadastros">
+              <a class="dropdown-item" href="cadastroContato.html">
+                <i class="bi-person-fill"></i> Novo contato</a>
+              <a class="dropdown-item" href="listaContatos.html">
+                <i class="bi-list-ul"></i> Lista de contatos</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" id="menuConta" 
+            data-toogle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="bi-gear-fill"></i> Minha conta</a>
+            <div class="dropdown-menu" aria-labelledby="menuConta">
+              <a class="dropdown-item" href="alterarDados.html">
+                <i class="bi-pencil-square"></i> Alterar dados</a>
+              <a class="dropdown-item" href="logout.php">
+                <i class="bi-door-open-fill"></i> Sair</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreApilcacao">
+              <i class="bi-info-circle"></i> Sobre</a>
+          </li>
+        </ul>
+        <form class="form-inline my-lg-0" method="get" accept="listaContatos.html">
+          <input class="form-control mr-sm-2" type="search" name="busca" placeholder="Pesquisar">
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
+        </form>
+        <span></span>
+      </div>
     </div>
   </nav>
+  <div class="modal fade" id="modalSobreApilcacao" tabindex="-1" role="dialog" aria-labelledby="sobreAplicacao"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="sobreAplicacao">Sobre</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img src="img/logo.jpg">
+          <hr>
+          <p>Agenda de contatos</p>
+          <p>Versão 1.0</p>
+          <p>Todos os direitos reservados &copy; 2022</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
