--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" id="menuCadastros" 
-            data-toogle="dropdown" aria-haspopup="true" aria-expanded="false">
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="bi-card-list"></i> Cadastros</a>
             <div class="dropdown-menu" aria-labelledby="menuCadastros">
               <a class="dropdown-item" href="cadastroContato.html">
@@ -48,7 +48,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" id="menuConta" 
-            data-toogle="dropdown" aria-haspopup="true" aria-expanded="false">
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="bi-gear-fill"></i> Minha conta</a>
             <div class="dropdown-menu" aria-labelledby="menuConta">
               <a class="dropdown-item" href="alterarDados.html">
@@ -58,7 +58,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreApilcacao">
+            <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreAplicacao">
               <i class="bi-info-circle"></i> Sobre</a>
           </li>
         </ul>
@@ -70,7 +70,7 @@
       </div>
     </div>
   </nav>
-  <div class="modal fade" id="modalSobreApilcacao" tabindex="-1" role="dialog" aria-labelledby="sobreAplicacao"
+  <div class="modal fade" id="modalSobreAplicacao" tabindex="-1" role="dialog" aria-labelledby="sobreAplicacao"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
