--- a/alterarDados.html
+++ b/alterarDados.html
@@ -2,182 +2,204 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Agenda de contatos</title>
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap-icons.css">
-  <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/bootstrap.bundle.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Agenda de contatos</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-icons.css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
 
-  <style>
-    html {
-      height: 100%;
-    }
+    <style>
+        html {
+            height: 100%;
+        }
 
-    body {
-      background: url('img/dark-blue-background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      height: 100%;
-      overflow-x: hidden;
-    }
-  </style>
+        body {
+            background: url('img/dark-blue-background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            height: 100%;
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="img/icone.svg" width="30" height="30" alt="Agenda de contatos" />
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" id="menuCadastros" 
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="bi-card-list"></i> Cadastros</a>
-            <div class="dropdown-menu" aria-labelledby="menuCadastros">
-              <a class="dropdown-item" href="cadastroContato.html">
-                <i class="bi-person-fill"></i> Novo contato</a>
-              <a class="dropdown-item" href="listaContatos.html">
-                <i class="bi-list-ul"></i> Lista de contatos</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="img/icone.svg" width="30" height="30" alt="Agenda de contatos" />
+            </a>
+            <button class="navbar-toggler" type="button" data-toogle="collapse" data-target="#navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" id="menuCadastros"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="bi-card-list"></i> Cadastros</a>
+                        <div class="dropdown-menu" aria-labelledby="menuCadastros">
+                            <a class="dropdown-item" href="cadastroContato.html">
+                                <i class="bi-person-fill"></i> Novo contato</a>
+                            <a class="dropdown-item" href="listaContatos.html">
+                                <i class="bi-list-ul"></i> Lista de contatos</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" id="menuConta" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <i class="bi-gear-fill"></i> Minha conta</a>
+                        <div class="dropdown-menu" aria-labelledby="menuConta">
+                            <a class="dropdown-item" href="alterarDados.html">
+                                <i class="bi-pencil-square"></i> Alterar dados</a>
+                            <a class="dropdown-item" href="logout.php">
+                                <i class="bi-door-open-fill"></i> Sair</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreAplicacao">
+                            <i class="bi-info-circle"></i> Sobre</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-lg-0" method="get" accept="listaContatos.html">
+                    <input class="form-control mr-sm-2" type="search" name="busca" placeholder="Pesquisar">
+                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
+                </form>
+                <span></span>
             </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" id="menuConta" 
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="bi-gear-fill"></i> Minha conta</a>
-            <div class="dropdown-menu" aria-labelledby="menuConta">
-              <a class="dropdown-item" href="alterarDados.html">
-                <i class="bi-pencil-square"></i> Alterar dados</a>
-              <a class="dropdown-item" href="logout.php">
-                <i class="bi-door-open-fill"></i> Sair</a>
+        </div>
+    </nav>
+    <div class="h-100 row align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm"></div>
+                <div class="col-sm-12">
+                    <div class="card border-primary">
+                        <div class="card-header bg-primary text-white">
+                            <h5>Alterar dados</h5>
+                        </div>
+                        <div class="card-body">
+                            <form id="novoUsuario" method="post" action="novoUsuario.php">
+                                <input type="hidden" name="acao" value="salvar">
+                                <div class="form-group">
+                                    <label for="nomeUsuario">Nome</label>
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <div class="input-group-text"><i class="bi-people-fill"></i></div>
+                                        </div>
+                                        <input type="text" class="form-control" id="nomeUsuario" name="nomeUsuario"
+                                            placeholder="Digite seu nome" value="" required>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="mailUsuario">E-mail</label>
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <div class="input-group-text"><i class="bi-at"></i></div>
+                                                </div>
+                                                <input type="email" class="form-control" id="mailUsuario"
+                                                    name="mailUsuario" placeholder="Digite seu e-mail" value=""
+                                                    required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="mail2Usuario">Repita seu e-mail</label>
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <div class="input-group-text"><i class="bi-at"></i></div>
+                                                </div>
+                                                <input type="email" class="form-control" id="mail2Usuario"
+                                                    name="mail2Usuario" placeholder="Repita seu e-mail" value=""
+                                                    required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="senhaAtualUsuario">Senha atual</label>
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <div class="input-group-text"><i class="bi-key-fill"></i></div>
+                                                </div>
+                                                <input type="password" class="form-control" id="senhaUsuario"
+                                                    name="senhaAtualUsuario" placeholder="Digite sua senha atual"
+                                                    value="" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="senhaUsuario">Nova senha</label>
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <div class="input-group-text"><i class="bi-key-fill"></i></div>
+                                                </div>
+                                                <input type="password" class="form-control" id="senhaUsuario"
+                                                    name="senhaUsuario" placeholder="Digite sua nova senha" value=""
+                                                    required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="senha2Usuario">Repita a nova senha</label>
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <div class="input-group-text"><i class="bi-key-fill"></i></div>
+                                                </div>
+                                                <input type="password" class="form-control" id="senha2Usuario"
+                                                    name="senha2Usuario" placeholder="Repita sua nova senha" value=""
+                                                    required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm text-right">
+                                        <button class="btn btn-primary" type="submit">Salvar</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm"></div>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-toggle="modal" data-target="#modalSobreAplicacao">
-              <i class="bi-info-circle"></i> Sobre</a>
-          </li>
-        </ul>
-        <form class="form-inline my-lg-0" method="get" accept="listaContatos.html">
-          <input class="form-control mr-sm-2" type="search" name="busca" placeholder="Pesquisar">
-          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
-        </form>
-        <span></span>
-      </div>
+        </div>
     </div>
-  </nav>
-  <div class="h-100 row align-items-center pt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <div class="card border-primary my-5">
-            <div class="card-header bg-primary text-white">
-              <h5>Cadastro de novo usuário</h5>
+    <div class="modal fade" id="modalSobreAplicacao" tabindex="-1" role="dialog" aria-labelledby="sobreAplicacao"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="sobreAplicacao">Sobre</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/logo.jpg">
+                    <hr>
+                    <p>Agenda de contatos</p>
+                    <p>Versão 1.0</p>
+                    <p>Todos os direitos reservados &copy; 2022</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
-            <div class="card-body">
-              <form id="novoUsuario" method="post" action="novoUsuario.php">
-                <input type="hidden" name="acao" value="salvar">
-                <div class="form-group">
-                  <label for="nomeUsuario">Nome</label>
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text"><i class="bi-people-fill"></i></div>
-                    </div>
-                    <input type="text" class="form-control" id="nomeUsuario" name="nomeUsuario"
-                      placeholder="Digite seu nome" value="" required>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm">
-                    <div class="form-group">
-                      <label for="mailUsuario">E-mail</label>
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text"><i class="bi-at"></i></div>
-                        </div>
-                        <input type="email" class="form-control" id="mailUsuario" name="mailUsuario"
-                          placeholder="Digite seu e-mail" value="" required>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm">
-                    <div class="form-group">
-                      <label for="mail2Usuario">Repita seu e-mail</label>
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text"><i class="bi-at"></i></div>
-                        </div>
-                        <input type="email" class="form-control" id="mail2Usuario" name="mail2Usuario"
-                          placeholder="Repita seu e-mail" value="" required>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm">
-                    <div class="form-group">
-                      <label for="senhaUsuario">Senha</label>
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text"><i class="bi-key-fill"></i></div>
-                        </div>
-                        <input type="password" class="form-control" id="senhaUsuario" name="senhaUsuario"
-                          placeholder="Digite sua senha" value="" required>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm">
-                    <div class="form-group">
-                      <label for="senha2Usuario">Repita sua senha</label>
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text"><i class="bi-key-fill"></i></div>
-                        </div>
-                        <input type="password" class="form-control" id="senha2Usuario" name="senha2Usuario"
-                          placeholder="Repita sua senha" value="" required>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm text-right">
-                    <button class="btn btn-primary" type="submit">Cadastrar</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="modal fade" id="modalSobreAplicacao" tabindex="-1" role="dialog" aria-labelledby="sobreAplicacao"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="sobreAplicacao">Sobre</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <img src="img/logo.jpg">
-          <hr>
-          <p>Agenda de contatos</p>
-          <p>Versão 1.0</p>
-          <p>Todos os direitos reservados &copy; 2022</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
