--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreAplicacao">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#modalSobreAplicacao">
               <i class="bi-info-circle"></i> Sobre</a>
           </li>
         </ul>
