--- a/alterarDados.html
+++ b/alterarDados.html
@@ -30,7 +30,7 @@
             <a class="navbar-brand" href="#">
                 <img src="img/icone.svg" width="30" height="30" alt="Agenda de contatos" />
             </a>
-            <button class="navbar-toggler" type="button" data-toogle="collapse" data-target="#navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
@@ -58,7 +58,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreAplicacao">
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#modalSobreAplicacao">
                             <i class="bi-info-circle"></i> Sobre</a>
                     </li>
                 </ul>
