--- a/cadastroContato.html
+++ b/cadastroContato.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap-icons.css">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/bootstrap.bundle.js"></script>
+  <script src="js/jquery.mask.js"></script>
 
   <style>
     html {
@@ -61,7 +62,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" data-toogle="modal" data-target="#modalSobreAplicacao">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#modalSobreAplicacao">
               <i class="bi-info-circle"></i> Sobre</a>
           </li>
         </ul>
@@ -403,5 +404,10 @@
     </div>
   </div>
 </body>
+<script>
+    $(document).ready(function() {
+        $("#nascimentoContato").mask("00/00/0000");
+    });
+</script>
 
 </html>
