--- a/novoUsuario.html
+++ b/novoUsuario.html
@@ -7,6 +7,8 @@
   <title>Agenda de contatos</title>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap-icons.css">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/pwstrength-bootstrap.js"></script>
 
   <style>
     html {
@@ -97,6 +99,10 @@
                     </div>
                   </div>
                 </div>
+                <div class="row" id="campo_senha">
+                  <div class="col-sm barra_senha"></div>
+                  <div class="col-sm"></div>
+                </div>
                 <div class="row">
                   <div class="col-sm text-right">
                     <button class="btn btn-primary" type="submit">Cadastrar</button>
@@ -111,5 +117,19 @@
     </div>
   </div>
 </body>
+<script>
+  $(document).ready(function () {
+    var options = {};
+    options.ui = {
+      container: "#campo_senha",
+      viewports: {
+        progress: ".barra_senha"
+      },
+      showVerdictsInsideProgressBar: true
+    };
+
+    $("#senhaUsuario").pwstrength(options);
+  });
+</script>
 
 </html>
