--- a/novoUsuario.html
+++ b/novoUsuario.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/bootstrap-icons.css">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/pwstrength-bootstrap.js"></script>
+  <script src="js/jquery.validate.js"></script>
+  <script src="js/messages_pt_BR.js"></script>
 
   <style>
     html {
@@ -116,6 +118,42 @@
       </div>
     </div>
   </div>
+  <script>
+    jQuery.validator.setDefaults({
+        errorElement: 'span',
+        errorPlacement: function (error, element) {
+            error.addClass('invalid-feedback');
+            element.closest('.form-group').append(error);
+        },
+
+        highlight: function (element, errorClass, validClass) {
+            $(element).addClass('is-invalid');
+        },
+        unhighlight: function (element, errorClass, validClass) {
+            $(element).removeClass('is-invalid');
+        }
+
+    });
+    
+    $(document).ready(function () {
+        $("#novoUsuario").validate({
+            rules: {
+              nomeUsuario: {
+                minlength: 5
+              },
+              mail2Usuario: {
+                equalTo: "#mailUsuario"
+              },
+              senha2Usuario: {
+                equalTo: "#senhaUsuario"
+              },
+              senhaUsuario: {
+                minlength: 8
+              }
+            }
+        });
+    });
+</script>
 </body>
 <script>
   $(document).ready(function () {
